--- a/Factory_example/Factory_example/Factory_example.csproj
+++ b/Factory_example/Factory_example/Factory_example.csproj
@@ -46,10 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entites\Ball.cs">
+    <Compile Include="Abstraction\Toy.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Entites\BallFactory.cs" />
+    <Compile Include="Abstraction\Ball.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Abstraction\BallFactory.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
