--- a/Factory_example/Factory_example/Factory_example.csproj
+++ b/Factory_example/Factory_example/Factory_example.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstraction\Car.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Abstraction\Toy.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -85,6 +88,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Iamges\car.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
